# s2e2-pio-demo

./: platformio.ini
lib/s2e2cpp/: CMakeLists.txt  README.md  build.sh  clean.sh  library.json  run_tests.sh
lib/s2e2cpp/cmake/: BuildFlags.cmake  OutputDirs.cmake
lib/s2e2cpp/include/s2e2/: error.hpp  evaluator.hpp  function.hpp  operator.hpp
lib/s2e2cpp/include/s2e2/functions/: function_add_days.hpp  function_format_date.hpp  function_if.hpp  function_now.hpp  function_replace.hpp
lib/s2e2cpp/include/s2e2/operators/: operator_and.hpp  operator_equal.hpp  operator_greater.hpp  operator_greater_or_equal.hpp  operator_less.hpp  operator_less_or_equal.hpp  operator_not.hpp  operator_not_equal.hpp  operator_or.hpp  operator_plus.hpp
lib/s2e2cpp/src/: converter.cpp  converter.hpp  error.cpp  evaluator.cpp  evaluator_impl.cpp  evaluator_impl.hpp  function.cpp  interface_converter.hpp  interface_tokenizer.hpp  operator.cpp  token.cpp  token.hpp  token_type.hpp  tokenizer.cpp  tokenizer.hpp  utils.cpp  utils.hpp
lib/s2e2cpp/src/functions/: function_add_days.cpp  function_format_date.cpp  function_if.cpp  function_now.cpp  function_replace.cpp
lib/s2e2cpp/src/operators/: operator_and.cpp  operator_equal.cpp  operator_greater.cpp  operator_greater_or_equal.cpp  operator_less.cpp  operator_less_or_equal.cpp  operator_not.cpp  operator_not_equal.cpp  operator_or.cpp  operator_plus.cpp  priorities.hpp
lib/s2e2cpp/test/: CMakeLists.txt
lib/s2e2cpp/test/src/: converter_mock.hpp  converter_tests.cpp  evaluator_tests.cpp  main.cpp  test_utils.hpp  tokenizer_mock.hpp  tokenizer_tests.cpp
lib/s2e2cpp/test/src/functions/: function_add_days_tests.cpp  function_format_date_tests.cpp  function_if_tests.cpp  function_now_tests.cpp  function_replace_tests.cpp
lib/s2e2cpp/test/src/operators/: operator_and_tests.cpp  operator_equal_tests.cpp  operator_greater_or_equal_tests.cpp  operator_greater_tests.cpp  operator_less_or_equal_tests.cpp  operator_less_tests.cpp  operator_not_equal_tests.cpp  operator_not_tests.cpp  operator_or_tests.cpp  operator_plus_tests.cpp
src/: main.cpp
